# ontogpt-api

./: .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/ontogpt_api/: __init__.py  config.py  main.py  ontogpt.py  opengpt.py
tests/: __init__.py  dev.py  test_api.py
