[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "ontogpt-api"
description = "An API to extract informations from text using OntoGPT"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
maintainers = [
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    # "ontogpt",
    # "ontogpt@{root:uri}/../ontogpt",
    "ontogpt@git+https://github.com/vemonet/ontogpt.git@improve-docs",
    "fastapi",
    "uvicorn",
]



[project.optional-dependencies]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "ruff >=0.0.219",
    "mypy >=0.991",
    "black >= 22.8.0",
]
dev = [
    "pre-commit >=2.17.0",
]


[project.urls]
Homepage = "https://github.com/vemonet/ontogpt-api"
Documentation = "https://github.com/vemonet/ontogpt-api"
History = "https://github.com/vemonet/ontogpt-api/releases"
Tracker = "https://github.com/vemonet/ontogpt-api/issues"
Source = "https://github.com/vemonet/ontogpt-api"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "dev",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
tests = "pytest {args}"
cov = "tests --cov src {args}"
dev = "uvicorn src.ontogpt_api.main:app --host 0.0.0.0 --port 8000 --reload {args}"
fmt = [
    "black src tests",
    "ruff src tests --fix",
]
check = [
    "ruff src tests",
    "black src tests --check",
    "mypy src",
]
all = [
    "format",
    "check",
    "cov",
]

# TOOLS
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/ontogpt_api/__init__.py"


[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*"]


[tool.mypy]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:"
]


[tool.black]
color = true
line-length = 120
target-version = ['py37']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py37"
line-length = 120
select = [
    "A",
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    # "FBT", # flake8-boolean-trap
    "I",   # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
